updated dependency pyro-ppl==1.6.0

--- a/shift_VAE_1D_examples_v2.ipynb
+++ b/shift_VAE_1D_examples_v2.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tommycwong/shift-VAE_STEM_examples/blob/main/shift_VAE_1D_examples_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tommycwong/shift-VAE-atomic/blob/main/shift_VAE_1D_examples_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,6 +50,7 @@
       },
       "source": [
         "!pip install --upgrade torch==1.8.1 torchvision==0.9.1\n",
+        "!pip install pyro-ppl==1.6.0\n",
         "!pip install pyroved==0.1.2\n",
         "!pip install lmfit"
       ],
